2008-04-03  Arnim Laeuger  <arniml@users.sourceforge.net>

   [ 1929235 ] Use less global and static variables:
   * src/bus/jopcyc.c, src/bus/zefant-xs3.c: made global variable
     last_address local
   * src/svf/svf.c, src/svf/svf.h: support reentrant parser and scanner
   * src/svf/svf_bison.y: provisions for reentrant parser
   * src/svf/svf_flex.l: made scanner reentrant
   * src/svf/Makefile.am: removed command line options for
     bison and flex
   * configure.ac: require flex 2.5.33 also for SVF scanner
   * doc/UrJTAG.txt: document flex version for SVF scanner

2008-04-02  Arnim Laeuger  <arniml@users.sourceforge.net>

   [ 1929235 ] Use less global and static variables:
   * src/bsdl/bsdl.c, src/cmd/bsdl.c: use globals from chain_t
   * src/tap/chain.c (chain_alloc): init BSDL globals
   * include/chain.h: added bsdl_globs_t to chain_t
   * include/bsdl.h: defined structure for BSDL globals
   * src/bsdl/Makefile.am, src/bsdl/bsdl_sem.c, src/bsdl/bsdl_flex.l,
     src/bsdl/bsdl_bison.y, src/bsdl/bsdl.c, src/bsdl/bsdl_local.h:
       renamed bsdl.h to bsdl_local.h

2008-04-01  Arnim Laeuger  <arniml@users.sourceforge.net>

   [ 1887221 ] Add configure switch to disable all cable&parport drivers:
   * doc/UrJTAG.txt: updates for new options and summary reporting
   * src/tap/parport.c: reworked driver referencing based on
     ENABLE_PARPORT_* macros
   * src/tap/cable.c: reworked driver referencing based on
     ENABLE_CABLE_* macros
   * src/tap/Makefile.am (libtap_a_SOURCES): include sources based on
     ENABLE_CABLE_* and ENABLE_PARPORT_* macros
   * src/bus/buses.c: reference bus drivers based on ENABLE_BUS_* macros
   * src/bus/buses.h: sorted sequence of extern declarations
   * src/bus/Makefile.am (libbus_a_SOURCES): include sources based on
     ENABLE_BUS_* macros
   * src/Makefile.am (jtag_LDADD): moved -lcmd to top of list to prevent
     linker error for --enable-cable=jim